--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,7 @@
 @import "styles/reset";
 @import "styles/app";
+@import "styles/header";
+@import "styles/panel";
+@import "styles/panel-sprites";
+@import "styles/panel-props";
 @import "styles/timeline";
-@import "styles/window";
