--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,7 +1,4 @@
-$black: #111;
-$charcoal: #323232;
-$darkgray: #2d2d2d;
-$dimgray: #3a3a3a;
+$charcoal: #333;
 $gray: #666;
 $lightgray: #999;
 $silver: #ccc;
@@ -29,413 +26,17 @@ body {
   color: $charcoal;
 }
 
-button {
-  cursor: pointer;
-  background: $blue;
-  color: white;
-  font-weight: bold;
-  border: thin solid $darkblue;
-  border-radius: 4px;
-  padding: 8px 20px;
-  display: flex;
-  align-items: center;
-  transition: 0.125s background,
-              0.125s color,
-              0.125s border;
-}
-
-button + button {
-  margin-left: 8px;
-}
-
-button.-alt {
-  background: $white;
-  color: $charcoal;
-  border-color: $silver;
-
-  &:hover {
-    background: $smoke;
-    border-color: $lightgray;
-  }
-}
-
-button .icon {
-  margin-left: -2px;
-  margin-right: 4px;
-}
-
-button:hover {
-  cursor: pointer;
-  background: $darkblue;
-}
-
-button:focus-within, button:focus {
-  border-color: white;
-}
-
-button[disabled] {
-  background: $white;
-  color: $lightgray;
-  border-color: transparent;
-
-  &:hover {
-    cursor: default;
-  }
-}
-
-.action {
-  cursor: pointer;
-}
-
-.action.-disabled {
-  cursor: default;
-}
-
-.icon.-disabled {
-  color: $silver;
-}
-
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-  background: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 5px 5px rgba(black, 0.25);
-  border-radius: 5px;
-  border: 2px solid transparent;
-}
-
-canvas {
-  image-rendering: pixelated;
-}
-
 .app {
-  height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
-}
-
-header {
-  background: $charcoal;
-  color: white;
-  width: 100%;
-  height: $header-height;
-  position: relative;
-  z-index: 1;
-}
-
-.header-block {
-  border-right: thin solid black;
-  padding: 0 24px;
-  width: $sidebar-left-width;
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.header-text {
-  display: flex;
-  flex-direction: column-reverse;
-  margin-left: 12px;
-}
-
-.header-title {
-  font-weight: bold;
-}
-
-.header-subtitle {
-  color: $silver;
-  margin-bottom: 2px;
+  min-height: 100vh;
 }
 
 .content {
   display: flex;
-  flex: 1;
+  flex: 2;
 
   & > * {
-    max-height: calc(100vh - #{$header-height});
+    flex: 1;
   }
-}
-
-.sidebar {
-  flex-shrink: 0;
-  display: flex;
-  flex-direction: column;
-}
-
-.sidebar.-left {
-  width: $sidebar-left-width;
-  border-right: thin solid $silver;
-}
-
-.sidebar.-right {
-  width: $sidebar-right-width;
-  border-left: thin solid $silver;
-}
-
-.sidebar-tabs {
-  display: flex;
-  background: $white;
-}
-
-.sidebar-subheader {
-  border-bottom: thin solid $silver;
-  padding: 12px 16px;
-  padding-left: 24px;
-  display: flex;
-  align-items: center;
-
-  .action.-add {
-    margin-left: 8px;
-  }
-}
-
-.sidebar-search {
-  cursor: text;
-  background: $white;
-  border: thin solid $silver;
-  border-radius: 4px;
-  color: $lightgray;
-  padding: 6px 12px;
-  display: flex;
-  align-items: center;
-  flex: 1;
-
-  &:focus-within {
-    background: white;
-    border-color: $blue;
-    color: $blue;
-
-    input::placeholder {
-      color: $lightgray;
-    }
-  }
-
-  input {
-    outline: 0;
-  }
-
-  .icon {
-    margin-right: 8px;
-  }
-}
-
-.tab {
-  flex: 1;
-  text-align: center;
-  line-height: 3rem;
-  font-weight: bold;
-  border: thin solid transparent;
-
-  &.-active {
-    background: white;
-  }
-
-  &:not(.-active) {
-    cursor: pointer;
-    color: $lightgray;
-    border-bottom-color: $silver;
-
-    &:first-child {
-      border-right-color: $silver;
-    }
-
-    &:last-child {
-      border-left-color: $silver;
-    }
-  }
-}
-
-.sidebar-input.-number {
-  width: 24px;
-}
-
-.sidebar-content {
-  padding: 8px 0;
-  flex: 1;
-  overflow-y: auto;
-
-  &.-empty {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: $lightgray;
-  }
-
-  .sidebar-notice {
-    padding: 48px 48px;
-    border: 2px dashed $silver;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  button.-create {
-    margin-top: 12px;
-
-    &:hover {
-      background: $darkblue;
-    }
-
-    .icon {
-      margin-right: 4px;
-    }
-  }
-
-  input.entry-name {
-    background: white;
-  }
-
-  .entry {
-    user-select: none;
-    display: flex;
-    align-items: center;
-    padding: 4px 2rem;
-
-    &:hover {
-      cursor: pointer;
-      background: $white;
-    }
-
-    &.-select {
-      background: $lightblue;
-      color: $blue;
-
-      &:hover {
-        background: $skyblue;
-      }
-
-      .thumb {
-        border-color: $blue;
-      }
-    }
-
-    .thumb {
-      margin-right: 1rem;
-    }
-  }
-}
-
-.thumb {
-  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAApklEQVR4Xu3WQQ0AIQADQdCEWjyBpjsZ+2AwQEJoO3Pv/Y3wrLXC28eYHsAPEAEdULaQErQCZrBMIAeAEAmSIAmSYLlDJEiCJFgmkARJkARJkARJsNwhEiRBEiwTSIIk+LwEzzmpA+69bQd4AD9ABHRA2UJK0AqYwTKBY3IAB3AAB5QtxAEcwAFlAjkAhEiQBEmQBMsdIkESJMEygSRIgiRIgm9L8AfNACXwHHdRTwAAAABJRU5ErkJggg==) #ccc;
-  border: thin solid $gray;
-  border-radius: 4px;
-  width: 64px;
-  height: 64px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
-}
-
-.thumb canvas {
-  max-width: 64px;
-  max-height: 64px;
-}
-
-.sidebar-footer {
-  border-top: thin solid $silver;
-  padding: 8px 1rem;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.sidebar-footer .button + .button {
-  margin-left: 8px;
-}
-
-.sidebar section {
-  padding: 16px 0;
-  margin: 0 24px;
-  display: flex;
-}
-
-.sidebar section + section {
-  border-top: thin solid $silver;
-}
-
-.sidebar-key {
-  width: 72px;
-  font-weight: bold;
-}
-
-.sidebar-value {
-  display: flex;
-}
-
-.sidebar-fields {
-  display: flex;
-}
-
-.sidebar-field:not(.-text) {
-  display: flex
-}
-
-.sidebar-field + .sidebar-field {
-  margin-left: 16px;
-}
-
-.sidebar-fieldname {
-  color: $lightgray;
-  margin-right: 16px;
-}
-
-input.-sidebar-field {
-  width: 24px;
-}
-
-.editor-column {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  overflow: hidden;
-}
-
-#editor {
-  background: #e5e5e5;
-  flex: 1;
-  overflow: auto;
-  padding: 32px;
-  position: relative;
-}
-
-#editor canvas {
-  border: thin solid $lightgray;
-  box-shadow: 0 8px 16px rgba(black, 0.5);
-  image-rendering: pixelated;
-}
-
-#editor.-anims {
-  overflow: hidden;
-}
-
-#editor.-anims canvas {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%) scale(2);
-}
-
-#upload {
-  width: 0;
-}
-
-.upload-text {
-  color: $lightgray;
-  font-size: 0.875em;
-  text-align: center;
-  display: block;
-  margin-top: 8px;
 }
