--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -1,184 +1,4 @@
-#timeline {
-  user-select: none;
-  background: white;
+.timeline {
+  flex: 1;
   border-top: thin solid $silver;
-  padding: 16px 24px;
-  width: 100%;
-  overflow: hidden;
-
-  .timeline {
-    background: $white;
-    border: thin solid $silver;
-    border-radius: 4px;
-    margin-top: 8px;
-    width: 100%;
-    min-height: 96px;
-    overflow-x: auto;
-
-    &::-webkit-scrollbar {
-      height: 0;
-    }
-  }
-
-  .timeline-frames {
-    outline: 0;
-    border-spacing: 4px;
-  }
-
-  .frame-number {
-    cursor: pointer;
-    color: $lightgray;
-    border: thin solid $silver;
-    border-radius: 4px;
-    text-align: center;
-    font-size: 12px;
-    line-height: 20px;
-    min-width: 64px;
-    height: 20px;
-
-    &:hover {
-      background: $smoke;
-      border-color: $lightgray;
-    }
-
-    &.-select {
-      background: $lightblue;
-      color: $blue;
-      border-color: $blue;
-    }
-
-    &.-focus {
-      background: $blue;
-      color: white;
-      border-color: $blue;
-    }
-  }
-
-  .frame-number.-add {
-    visibility: hidden;
-  }
-
-  .frame {
-    cursor: pointer;
-    background: white;
-    border-radius: 4px;
-    height: 64px;
-
-    .thumb {
-      width: 100%;
-    }
-
-    &:hover .thumb {
-      border-color: $lightgray;
-    }
-
-    &.-select, &.-focus {
-      .thumb {
-        border-color: $blue;
-      }
-    }
-  }
-
-  .frame.-add {
-    background: none;
-    border: 2px dashed $silver;
-    color: $lightgray;
-    text-align: center;
-  }
-
-  .frame-text {
-    margin-top: -4px;
-    font-size: 12px;
-  }
-
-  .timeline-controls {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .controls-lhs, .controls-rhs {
-    display: flex;
-  }
-
-  .controls-rhs {
-    align-items: center;
-  }
-
-  .controls-rhs .icon + .icon {
-    margin-left: 8px;
-  }
-
-  .panel {
-    display: flex;
-    align-items: center;
-  }
-
-  .panel + .panel {
-    margin-left: 8px;
-  }
-
-  .panel-button {
-    background: white;
-    color: $charcoal;
-    border: thin solid $silver;
-    border-radius: 0;
-    padding: 0 8px;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    height: 100%;
-
-    &[disabled] {
-      pointer-events: none;
-      color: $silver;
-
-      &:hover {
-        background: white;
-      }
-    }
-  }
-
-  .panel-button:first-child {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    border-right-color: transparent;
-  }
-
-  .panel-button:last-child {
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-left-color: transparent;
-  }
-
-  .panel-button:only-child {
-    border-left-color: $silver;
-    border-right-color: $silver;
-  }
-
-  .panel-button:hover {
-    cursor: pointer;
-    background: $white;
-  }
-
-  .panel-button.-select {
-    background: $lightblue;
-    color: $blue;
-    border-color: $blue;
-  }
-
-  .panel-button .icon {
-    margin: 0;
-  }
-
-  .icon.-step-prev {
-    transform: rotate(-90deg);
-  }
-
-  .icon.-step-next {
-    transform: rotate(90deg);
-  }
-
-  .icon.-small {
-    font-size: 20px;
-  }
 }
