add header for all panels

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 @import "styles/reset";
 @import "styles/app";
 @import "styles/header";
+@import "styles/editor";
 @import "styles/panel";
 @import "styles/panel-sprites";
 @import "styles/panel-props";
