--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -1,18 +1,4 @@
-.timeline {
+.panel.-timeline {
   flex: 1;
   border-top: thin solid $silver;
-}
-
-.timeline.-min {
-  &:hover .panel-header {
-    background: $smoke;
-  }
-
-  &:focus-within .panel-header {
-    background: none;
-  }
-
-  .icon.-button:hover {
-    background: none;
-  }
 }
