--- a/src/styles/panel.scss
+++ b/src/styles/panel.scss
@@ -1,12 +1,9 @@
-.panel {
-
-}
-
 .panel-header {
   background: white;
   border-bottom: thin solid $silver;
   font-weight: bold;
   height: 48px;
+  line-height: 1;
   padding: 0 16px;
   display: flex;
   justify-content: space-between;
@@ -24,4 +21,30 @@
 .panel.-min {
   cursor: pointer;
   flex: none;
+
+  &:hover .panel-header {
+    background: $smoke;
+  }
+
+  .icon.-button:hover {
+    background: none;
+  }
+}
+
+.panel.-sprites.-min, .panel.-props.-min {
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+
+  .panel-header {
+    border-bottom: none;
+    padding: 16px 0;
+    width: 48px;
+    height: 100%;
+    transform: rotate(180deg);
+    justify-content: flex-end;
+  }
+
+  .icon {
+    margin-top: 8px;
+  }
 }
