--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -1,3 +1,10 @@
 .editor {
   background: $smoke;
+  overflow: hidden;
+  position: relative;
+  flex: 3;
+}
+
+.editor canvas {
+  position: absolute;
 }
