--- a/src/styles/panel.scss
+++ b/src/styles/panel.scss
@@ -30,7 +30,6 @@
 
   .panel-header {
     border-bottom: none;
-    padding: 16px 0;
     width: 48px;
     height: 100%;
     transform: rotate(180deg);
@@ -38,6 +37,6 @@
   }
 
   .icon {
-    margin-top: 8px;
+    margin: 8px 0 16px;
   }
 }
