--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 @import "styles/reset";
 @import "styles/app";
+@import "styles/thumb";
 @import "styles/header";
 @import "styles/editor";
 @import "styles/panel-sprites";
