--- a/src/styles/panel-sprites.scss
+++ b/src/styles/panel-sprites.scss
@@ -1,4 +1,24 @@
 .panel.-sprites {
   background: $white;
   flex: 2;
+  display: flex;
+  flex-direction: column;
+
+  .panel-content {
+    overflow: auto;
+    position: relative;
+    flex: 1;
+  }
+
+  .thumbs-wrap {
+    position: absolute;
+  }
+
+  .thumbs {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 8px;
+    padding: 16px 0;
+  }
 }
