--- a/src/styles/panel-sprites.scss
+++ b/src/styles/panel-sprites.scss
@@ -10,6 +10,23 @@
     flex: 1;
   }
 
+  .banner {
+    background: $blue;
+    color: white;
+    font-weight: bold;
+    padding: 12px 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    button {
+      background: white;
+      color: $blue;
+      padding: 8px 16px;
+      border-radius: 4px;
+    }
+  }
+
   .thumbs {
     position: absolute;
     display: flex;
