--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -44,6 +44,10 @@ canvas {
   image-rendering: pixelated;
 }
 
+.icon.-small {
+  font-size: 20px;
+}
+
 .app {
   display: flex;
   flex-direction: column;
