--- a/src/styles/panel-sprites.scss
+++ b/src/styles/panel-sprites.scss
@@ -2,7 +2,8 @@ $banner-height: 56px;
 
 .panel.-sprites {
   background: $white;
-  flex: 2;
+  border-right: thin solid $silver;
+  flex: 1;
   display: flex;
   flex-direction: column;
 
@@ -27,8 +28,9 @@ $banner-height: 56px;
     color: white;
     font-weight: bold;
     padding: 0 24px;
-    height: $banner-height;
     margin-top: -$banner-height;
+    margin-right: 15px;
+    height: $banner-height;
     display: flex;
     justify-content: space-between;
     align-items: center;
