--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -8,6 +8,8 @@
 
 .editor canvas {
   position: absolute;
+  left: 50%;
+  top: 50%;
   border: thin solid $gray;
   box-shadow: 0 8px 16px rgba(black, 0.25);
 }
