--- a/src/styles/thumb.scss
+++ b/src/styles/thumb.scss
@@ -13,6 +13,7 @@ $thumb-size: 64px;
   justify-content: center;
   position: relative;
   overflow: hidden;
+  transition: 125ms opacity;
 }
 
 .thumb canvas {
@@ -36,4 +37,8 @@ $thumb-size: 64px;
     bottom: 0;
     left: 0;
   }
+}
+
+.thumb.-drag {
+  opacity: 0.75;
 }
