--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -50,6 +50,8 @@
 }
 
 .timeline-track {
+  cursor: pointer;
+
   .track-name {
     border-top: thin solid $silver;
     padding: 0 24px;
@@ -68,7 +70,6 @@
     color: $blue;
 
     &:hover {
-      cursor: pointer;
       background: $lightblue;
     }
   }
@@ -90,5 +91,16 @@
       border-color: $blue;
       background: $lightblue;
     }
+  }
+}
+
+.timeline-track.-select {
+  .track-name {
+    color: $blue;
+    border-right-color: $blue;
+  }
+
+  .track-name, .frame {
+    background: $lightblue;
   }
 }
