--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -7,6 +7,8 @@
 
   table {
     border-spacing: 0;
+    border-collapse: collapse;
+    width: 100%;
   }
 
   table::after {
@@ -40,6 +42,18 @@
   .frame:nth-child(2) {
     padding-left: 12px;
   }
+
+  .track-end {
+    width: 100%;
+  }
+
+  .track-bg {
+    border-top: thin solid $silver;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 80px;
+  }
 }
 
 .timeline-header, .timeline-track {
@@ -51,6 +65,7 @@
 
 .timeline-track {
   cursor: pointer;
+  position: relative;
 
   .track-name {
     border-top: thin solid $silver;
@@ -74,16 +89,12 @@
     }
   }
 
-  td:not(.track-name) {
-    border-top: thin solid $silver;
-  }
-
   .track-prompt {
     color: $lightgray;
     border: 2px dashed $silver;
     border-radius: 4px;
     line-height: calc(64px - 4px);
-    margin: 0 12px;
+    margin-left: 12px;
     text-align: center;
 
     &.-focus {
@@ -95,12 +106,25 @@
 }
 
 .timeline-track.-select {
+
   .track-name {
+    background: $lightblue;
     color: $blue;
+    border-top-color: $blue;
     border-right-color: $blue;
   }
 
   .track-name, .frame {
+    position: relative;
+    z-index: 2;
+  }
+
+  .track-bg {
+    border-top-color: $blue;
     background: $lightblue;
+  }
+
+  & + .timeline-track .track-bg {
+    border-top-color: $blue;
   }
 }
