--- a/src/styles/panel-sprites.scss
+++ b/src/styles/panel-sprites.scss
@@ -26,7 +26,7 @@ $banner-height: 56px;
   .banner {
     background: $blue;
     color: white;
-    font-weight: bold;
+    font-weight: 500;
     padding: 0 24px;
     height: $banner-height;
     margin-top: -$banner-height;
@@ -47,6 +47,7 @@ $banner-height: 56px;
     button {
       background: white;
       color: $blue;
+      font-weight: bold;
       padding: 8px 24px;
       border-radius: 4px;
     }
