drag and drop multiple frames

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -3,10 +3,13 @@
   padding: 0;
   border: 0;
   background: 0;
-  box-sizing: border-box;
   font: inherit;
   letter-spacing: inherit;
   color: inherit;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
 html {
