--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -38,6 +38,7 @@
     border-radius: 4px;
     width: $thumb-size;
     line-height: 24px;
+    font-size: 12px;
     margin-left: 4px;
     text-align: center;
     display: block;
