--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -9,6 +9,8 @@
   position: absolute;
   left: 50%;
   top: 50%;
+  transform-origin: 0 0 0;
+  // transition: 0.25s transform;
   border: thin solid $gray;
   box-shadow: 0 8px 16px rgba(black, 0.25);
 }
