first pass on full animation canvas

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,11 @@
-@import "styles/reset";
-@import "styles/app";
-@import "styles/thumb";
-@import "styles/header";
-@import "styles/editor";
-@import "styles/panel-sprites";
-@import "styles/panel-props";
-@import "styles/timeline";
-@import "styles/panel";
+@import 'styles/reset';
+@import 'styles/app';
+@import 'styles/thumb';
+@import 'styles/header';
+@import 'styles/editor';
+@import 'styles/editor-sprites';
+@import 'styles/editor-anims';
+@import 'styles/panel-sprites';
+@import 'styles/panel-props';
+@import 'styles/timeline';
+@import 'styles/panel';
