--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,6 +8,8 @@ $lightblue: #def;
 $skyblue: #cdf;
 $blue: #68e;
 $darkblue: #36d;
+$pink: #d5e;
+$magenta: #c4e;
 $font-sans: Inter, '-apple-system', BlinkMacSystemFont, Helvetica, Arial, sans-serif;
 $font-mono: 'Source Code Pro', Monaco, Consolas, monospace;
 $header-height: 72px;
