--- a/src/styles/panel-sprites.scss
+++ b/src/styles/panel-sprites.scss
@@ -43,6 +43,14 @@ $banner-height: 56px;
       animation: 125ms banner-enter ease-in reverse;
     }
 
+    &.-all {
+      background: $pink;
+
+      button {
+        color: $pink;
+      }
+    }
+
     button {
       background: white;
       color: $blue;
