--- a/src/style.scss
+++ b/src/style.scss
@@ -8,4 +8,5 @@
 @import 'styles/panel-sprites';
 @import 'styles/panel-props';
 @import 'styles/timeline';
+@import 'styles/timeline-controls';
 @import 'styles/panel';
