--- a/src/styles/timeline-controls.scss
+++ b/src/styles/timeline-controls.scss
@@ -1,6 +1,7 @@
 .timeline-controls {
   display: flex;
   padding: 8px 24px;
+  box-shadow: 0 1px $silver;
 
   .control-group {
     display: flex;
