--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -1,5 +1,3 @@
-@import './timeline-controls';
-
 $frame-number-width: $thumb-size;
 $track-height: $thumb-size + 16px;
 
@@ -12,6 +10,18 @@ $track-height: $thumb-size + 16px;
     height: 45vh;
     position: relative;
     overflow-y: auto;
+
+    &::after {
+      background: white;
+      border-right: thin solid $silver;
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 219px;
+      height: 100%;
+    }
   }
 
   table {
@@ -21,18 +31,40 @@ $track-height: $thumb-size + 16px;
     width: calc(100% - 1px);
   }
 
-  table::after {
-    content: '';
-    display: block;
-    background: white;
-    height: 80px;
-    border-top: thin solid $silver;
-    border-right: thin solid $silver;
-  }
-
-  tr, td {
+  tr, td:not(:first-child) {
     position: relative;
     z-index: 2;
+  }
+
+  tr *:first-child {
+    position: sticky;
+    left: 0;
+    z-index: 4;
+  }
+
+  th {
+    position: sticky;
+    top: 0;
+    z-index: 4;
+    background: $white;
+  }
+
+  tr th:first-child {
+    background: white;
+    z-index: 5;
+  }
+
+  .frame-number {
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      box-shadow: 0 1px $silver;
+    }
   }
 
   .frame-number.-focus span {
@@ -55,10 +87,6 @@ $track-height: $thumb-size + 16px;
 
   .frame-number:nth-child(2) span {
     margin-left: 12px;
-  }
-
-  .frame-number:last-child span {
-    margin-right: 12px;
   }
 
   .frame .thumb {
@@ -119,6 +147,13 @@ $track-height: $thumb-size + 16px;
 
   .track-end {
     width: 100%;
+    box-shadow: 0 1px $silver;
+
+    &::after {
+      content: '';
+      display: block;
+      margin-right: 8px;
+    }
   }
 
   .track-bg {
@@ -144,37 +179,6 @@ $track-height: $thumb-size + 16px;
     cursor: pointer;
   }
 
-  .track-name {
-    border-top: thin solid $silver;
-    padding: 0 24px;
-    height: $track-height;
-    font-weight: 500;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-
-    & > .icon {
-      margin-right: 8px;
-    }
-
-    div {
-      width: 100%;
-      display: flex;
-      flex-direction: row-reverse;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    div .icon {
-      margin-left: -4px;
-      border-radius: 4px;
-
-      &:hover {
-        background: $skyblue;
-      }
-    }
-  }
-
   .anim-name {
     border: 4px solid transparent;
     outline: thin solid transparent;
@@ -191,6 +195,7 @@ $track-height: $thumb-size + 16px;
   .track-name.-add {
     cursor: pointer;
     color: $blue;
+    box-shadow: 0 1px $silver;
 
     &:hover {
       background: $lightblue;
@@ -209,6 +214,37 @@ $track-height: $thumb-size + 16px;
       color: $blue;
       border-color: $blue;
       background: $lightblue;
+    }
+  }
+}
+
+.track-name {
+  border-top: thin solid $silver;
+  padding: 0 24px;
+  height: $track-height;
+  font-weight: 500;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  & > .icon {
+    margin-right: 8px;
+  }
+
+  div {
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  div .icon {
+    margin-left: -4px;
+    border-radius: 4px;
+
+    &:hover {
+      background: $skyblue;
     }
   }
 }
