create animation from timeline button

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,7 +8,8 @@ $lightblue: #def;
 $skyblue: #cdf;
 $blue: #68e;
 $darkblue: #57d;
-$pink: #d5e;
+$lightpink: #fde;
+$pink: #d6c;
 $magenta: #c4e;
 $font-sans: Inter, '-apple-system', BlinkMacSystemFont, Helvetica, Arial, sans-serif;
 $font-mono: 'Source Code Pro', Monaco, Consolas, monospace;
